add blogpost: accepted in bangkit academy

--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -3,22 +3,26 @@ interface Astro {
 	props: {
 		title: string;
 		parentClass?: string;
+		desc?: string;
 	};
 }
 
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 
-const { title, parentClass } = Astro.props;
+const { title, parentClass, desc } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
-		<BaseHead title={title} description="Web development portfolio of Xirf" />
+		<BaseHead title={title} description={desc ?? "Web development portfolio of Xirf"} />
 	</head>
-	<body class:list={["bg-#ebeef5 text-#3b3b3b @dark:bg-#111215 @dark:text-#9ca3af pb-20", parentClass]}>
+	<body class:list={["bg-#ebeef5 text-#3b3b3b @dark:bg-#111215 @dark:text-#9ca3af mb-20", parentClass]}>
 		<Header />
 		<slot />
+		<div class="px-2 text-center">
+			<p class="text-xs opacity-50">Licensed under <a href="https://mit-license.org/" class="underline">MIT License</a> &middot; Project source code available on <a href="https://github.com/xirf/xirf" class="underline">GitHub Repo</a></p>
+		</div>
 	</body>
 </html>
