--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,7 +14,7 @@ for (const post of posts) {
 ---
 
 <DefautLayout title="Blog">
-	<main class="grid gap-6 mt-32 max-w-3xl mx-auto px-12">
+	<main class="grid gap-6 mt-32 max-w-3xl mx-auto px-12 mb-20">
 		<h1>
 			<span class="text-3xl lg:text-4xl font-bold font-lexend">Blog</span>
 			<span class="font-light text-sm">A collection of my thoughts</span>
@@ -23,7 +23,7 @@ for (const post of posts) {
 			Here you can find a collection of my thoughts on various topics. I try to write about things that I find interesting, and that I think
 			others might find interesting as well. I hope you enjoy reading them!
 		</p>
-		<section class="flex flex-col">
+		<section class="flex flex-col gap-3">
 			{
 				Object.entries(postsByYear)
 					.sort(([a], [b]) => parseInt(b) - parseInt(a))
@@ -34,8 +34,10 @@ for (const post of posts) {
 								style="text-shadow: var(--xclr) 2px 0px 0px, var(--xclr) 1.75517px 0.958851px 0px, var(--xclr) 1.0806px 1.68294px 0px, var(--xclr) 0.141474px 1.99499px 0px, var(--xclr) -0.832294px 1.81859px 0px, var(--xclr) -1.60229px 1.19694px 0px, var(--xclr) -1.97999px 0.28224px 0px, var(--xclr) -1.87291px -0.701566px 0px, var(--xclr) -1.30729px -1.51361px 0px, var(--xclr) -0.421592px -1.95506px 0px, var(--xclr) 0.567324px -1.91785px 0px, var(--xclr) 1.41734px -1.41108px 0px, var(--xclr) 1.92034px -0.558831px 0px; --xclr: gray;">
 								{year}
 							</div>
-							<ul class="mt-4 z-50">
-								{posts.map((post: any) => (
+							<ul class="mt-4 z-50 gap-4 grid">
+								{posts
+									.sort((a: any, b: any) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+									.map((post: any) => (
 									<li class="mt-2">
 										<a
 											href={`/blog/${post.slug}`}
