--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -19,7 +19,7 @@ const { Content } = await post.render();
 ---
 
 <DefaultLayout desc={description} title={title}>
-	<div class="max-w-3xl mx-auto px-12 mb-20">
+	<div class="max-w-3xl mx-auto px-12">
 		<article class="my-12">
 			<div class="prose">
 				<div class="title">
