--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -22,7 +22,7 @@ const { title, parentClass, desc } = Astro.props;
 		<Header />
 		<slot />
 		<div class="px-2 text-center">
-			<p class="text-xs opacity-50">Licensed under <a href="https://mit-license.org/" class="underline">MIT License</a> &middot; Project source code available on <a href="https://github.com/xirf/xirf" class="underline">GitHub Repo</a></p>
+			<p class="text-xs opacity-50">Licensed under <a href="https://mit-license.org/" class="underline">MIT License</a> &middot; Project source code available on <a href="https://github.com/xirf/xirf-portofolio" class="underline">GitHub Repo</a></p>
 		</div>
 	</body>
 </html>
