--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ const socialMedia = [
 ];
 ---
 
-<DefaultLayout>
-	<div class="flex items-center justify-center h-90vh p-12">
+<DefaultLayout desc="A Brief Introduction of Andika Nur Pratama">
+	<div class="flex items-center justify-center h-70vh p-12">
 		<main class="w-full grid gap-6 max-w-xl">
 			<div>
 				<h1>
