--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -7,7 +7,7 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
+const { title, description, image = "/screenshot.png" } = Astro.props;
 import { ViewTransitions } from "astro:transitions";
 ---
 
