--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,27 +14,18 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>{title} - Xirf</title>
 	</head>
 	<body>
-		<slot />
+		<div class="p-1.5rem max-w-6xl mx-auto border-1px">
+			<slot />
+		</div>
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		font-family: "Outfit", system-ui, sans-serif;
+		background-color: hsl(224, 10%, 10%);
 		background-size: 224px;
 	}
 	code {
@@ -49,3 +40,5 @@ const { title } = Astro.props;
 			monospace;
 	}
 </style>
+
+<script is:inline></script>
