who is the dumb that rewrite everything in upgrade?

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -7,68 +7,25 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = "/favicon.svg" } = Astro.props;
-import { ViewTransitions } from "astro:transitions";
+const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 ---
 
-<!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
-
-<!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
-<!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
-
-<!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<!-- <meta property="og:image" content={new URL(image, Astro.url)} /> -->
-
-<!-- Twitter -->
+<meta property="og:image" content={new URL(image, Astro.url)} />
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<!-- <meta property="twitter:image" content={new URL(image, Astro.url)} /> -->
-
-<style is:global>
-	* {
-		font-family: "Outfit", monospace;
-		box-sizing: border-box;
-	}
-
-	::-webkit-scrollbar-track {
-		background-color: transparent;
-	}
-
-	::-webkit-scrollbar {
-		width: 10px;
-	}
-
-	::-webkit-scrollbar:horizontal {
-		height: 10px;
-	}
-
-	::-webkit-scrollbar-track,
-	::-webkit-scrollbar-corner {
-		background: transparent;
-	}
-
-	::-webkit-scrollbar-thumb {
-		background: #1d1e21;
-	}
-
-	::-webkit-scrollbar-thumb:hover {
-		background: #25272a;
-	}
-</style>
-
-<ViewTransitions />
+<meta property="twitter:image" content={new URL(image, Astro.url)} />
