--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,34 +3,34 @@ const links = [
 	{
 		href: "/blog",
 		label: "Blog",
-		icon: "i-mynaui-book",
+		icon: "i-myna-book",
 	},
 	{
 		href: "/projects",
 		label: "Projects",
-		icon: "i-mynaui-sparkles",
+		icon: "i-myna-sparkles",
 	},
 ];
 
 const iconLinks = [
 	{
 		href: "https://github.com/xirf",
-		icon: "i-mynaui-brand-github",
+		icon: "i-myna-brand-github",
         label: "GitHub",
 	},
 	{
 		href: "https://twitter.com/xirfs",
-		icon: "i-mynaui-brand-x",
+		icon: "i-myna-brand-x",
         label: "Twitter",
 	},
 	{
 		href: "mailto:itsandka@gmail.com",
-		icon: "i-mynaui-envelope",
+		icon: "i-myna-envelope",
         label: "Email",
 	},
 	{
 		href: "/rss.xml",
-		icon: "i-mynaui-rss",
+		icon: "i-myna-rss",
         label: "RSS",
 	},
 ];
@@ -39,7 +39,7 @@ const iconLinks = [
 <nav class="px-8 py-6 w-full flex items-center justify-between">
 	<a href="/">
 		<div class="flex justify-between gap-2 font-bold">
-			<span class="i-mynaui-terminal w-6 h-6">terminal</span>
+			<span class="i-myna-terminal w-6 h-6">terminal</span>
 			<span class="hidden sm:block ">Andka</span>
 		</div>
 	</a>
