what the f im doing

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -7,7 +7,7 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 ---
 
 <meta charset="utf-8" />
@@ -29,3 +29,92 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+<style is:global>
+	* {
+		scroll-behavior: smooth;
+	}
+	@media (prefers-reduced-motion: no-preference) {
+		html:not(.no-sliding) [slide-enter],
+		html:not(.no-sliding) .slide-enter,
+		html:not(.no-sliding) .slide-enter-content > *:not(:has(.table-of-contents)) {
+			--enter-stage: 0;
+			--enter-step: 90ms;
+			--enter-initial: 0ms;
+			animation: slide-enter 1s both 1;
+			animation-delay: calc(var(--enter-initial) + var(--enter-stage) * var(--enter-step));
+		}
+
+		.slide-enter-content > *:nth-child(1) {
+			--enter-stage: 1 !important;
+		}
+		.slide-enter-content > *:nth-child(2) {
+			--enter-stage: 2 !important;
+		}
+		.slide-enter-content > *:nth-child(3) {
+			--enter-stage: 3 !important;
+		}
+		.slide-enter-content > *:nth-child(4) {
+			--enter-stage: 4 !important;
+		}
+		.slide-enter-content > *:nth-child(5) {
+			--enter-stage: 5 !important;
+		}
+		.slide-enter-content > *:nth-child(6) {
+			--enter-stage: 6 !important;
+		}
+		.slide-enter-content > *:nth-child(7) {
+			--enter-stage: 7 !important;
+		}
+		.slide-enter-content > *:nth-child(8) {
+			--enter-stage: 8 !important;
+		}
+		.slide-enter-content > *:nth-child(9) {
+			--enter-stage: 9 !important;
+		}
+		.slide-enter-content > *:nth-child(10) {
+			--enter-stage: 10 !important;
+		}
+		.slide-enter-content > *:nth-child(11) {
+			--enter-stage: 11 !important;
+		}
+		.slide-enter-content > *:nth-child(12) {
+			--enter-stage: 12 !important;
+		}
+		.slide-enter-content > *:nth-child(13) {
+			--enter-stage: 13 !important;
+		}
+		.slide-enter-content > *:nth-child(14) {
+			--enter-stage: 14 !important;
+		}
+		.slide-enter-content > *:nth-child(15) {
+			--enter-stage: 15 !important;
+		}
+		.slide-enter-content > *:nth-child(16) {
+			--enter-stage: 16 !important;
+		}
+		.slide-enter-content > *:nth-child(17) {
+			--enter-stage: 17 !important;
+		}
+		.slide-enter-content > *:nth-child(18) {
+			--enter-stage: 18 !important;
+		}
+		.slide-enter-content > *:nth-child(19) {
+			--enter-stage: 19 !important;
+		}
+		.slide-enter-content > *:nth-child(20) {
+			--enter-stage: 20 !important;
+		}
+	}
+
+	@keyframes slide-enter {
+		0% {
+			transform: translateY(10px);
+			opacity: 0;
+		}
+
+		to {
+			transform: translateY(0);
+			opacity: 1;
+		}
+	}
+</style>
