--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,11 +22,9 @@ const socialMedia = [
 
 <Layout>
 	<div class="flex items-center justify-center h-70vh p-12">
-		<div class="w-full grid gap-6 max-w-xl">
+		<div class="w-full grid gap-6 max-w-xl slide-enter-content">
 			<div>
-				<h1>
-					<span class="@dark:text-#e5e7eb text-4xl font-bold">Xirf</span>
-				</h1>
+				<h1 class="@dark:text-#e5e7eb text-4xl font-bold item">Xirf</h1>
 			</div>
 			<div class="text-sm grid gap-3">
 				<div>
