--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const today = new Date();
 ---
 
-<footer>
+<footer class="py-4">
 	<p class="text-xs text-center opacity-50"> Licensed under <a href="https://mit-license.org/" class="underline">MIT License</a> &middot; Project source code available on <a href="https://github.com/xirf/xirf-portofolio" class="underline">GitHub Repo</a > </p>
 </footer>
