--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,111 +1,57 @@
 ---
-import BaseHead from '../../components/BaseHead.astro';
-import Header from '../../components/Header.astro';
-import Footer from '../../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
+import { getCollection } from "astro:content";
+import DefautLayout from "../../layouts/Layout.astro";
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
+const posts = (await getCollection("blog")).sort((a, b) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime());
+
+let postsByYear: Record<number, typeof posts> = {};
+
+for (const post of posts) {
+	const year = post.data.pubDate.getFullYear();
+	if (!postsByYear[year]) postsByYear[year] = [];
+	postsByYear[year].push(post);
+}
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<style>
-			main {
-				width: 960px;
-			}
-			ul {
-				display: flex;
-				flex-wrap: wrap;
-				gap: 2rem;
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
-			}
-			ul li {
-				width: calc(50% - 1rem);
-			}
-			ul li * {
-				text-decoration: none;
-				transition: 0.2s ease;
-			}
-			ul li:first-child {
-				width: 100%;
-				margin-bottom: 1rem;
-				text-align: center;
-			}
-			ul li:first-child img {
-				width: 100%;
-			}
-			ul li:first-child .title {
-				font-size: 2.369rem;
-			}
-			ul li img {
-				margin-bottom: 0.5rem;
-				border-radius: 12px;
-			}
-			ul li a {
-				display: block;
-			}
-			.title {
-				margin: 0;
-				color: rgb(var(--black));
-				line-height: 1;
-			}
-			.date {
-				margin: 0;
-				color: rgb(var(--gray));
-			}
-			ul li a:hover h4,
-			ul li a:hover .date {
-				color: rgb(var(--accent));
-			}
-			ul a:hover img {
-				box-shadow: var(--box-shadow);
-			}
-			@media (max-width: 720px) {
-				ul {
-					gap: 0.5em;
-				}
-				ul li {
-					width: 100%;
-					text-align: center;
-				}
-				ul li:first-child {
-					margin-bottom: 0;
-				}
-				ul li:first-child .title {
-					font-size: 1.563em;
-				}
-			}
-		</style>
-	</head>
-	<body>
-		<Header />
-		<main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								</a>
-							</li>
-						))
-					}
-				</ul>
-			</section>
-		</main>
-		<Footer />
-	</body>
-</html>
+<DefautLayout title="Blog">
+	<div class="grid gap-6 mt-32 max-w-3xl mx-auto px-12 mb-20 slide-enter-content">
+		<h1>
+			<span class="text-3xl lg:text-4xl font-bold font-lexend">Blog</span>
+			<span class="font-light text-sm">A collection of my thoughts</span>
+		</h1>
+		<p>
+			Here you can find a collection of my thoughts on various topics. I try to write about things that I find interesting, and that I think
+			others might find interesting as well. I hope you enjoy reading them!
+		</p>
+		{
+			Object.entries(postsByYear)
+				.sort(([a], [b]) => parseInt(b) - parseInt(a))
+				.map(([year, posts]: [string, any]) => (
+					<div class="my-12 relative">
+						<div class="text-2xl font-bold absolute -z-50 font-lexend text-9xl -top-12 -left-12 text-#111215 opacity-10 text-stroke">
+							{year}
+						</div>
+						<ul class="mt-4 z-50 gap-4 grid">
+							{posts
+								.sort((a: any, b: any) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+								.map((post: any) => (
+									<li class="mt-2">
+										<a
+											href={`/blog/${post.slug}`}
+											class="text-blue-400 hover:-translate-y-1 duration-300 transition-all transform inline-flex items-end gap-4">
+											{post.data.title}
+											<span class="text-xs text-gray-500">
+												{new Date(post.data.pubDate).toLocaleDateString("en-US", {
+													day: "2-digit",
+													month: "long",
+												})}
+											</span>
+										</a>
+									</li>
+								))}
+						</ul>
+					</div>
+				))
+		}
+	</div>
+</DefautLayout>
