--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title, description } = Astro.props;
 	<head>
 		<BaseHead title={title} description={description} />
 	</head>
-	<body class="@dark:(bg-d-base text-d-on-base) font-sans pb-3em">
+	<body class="@dark:(bg-d-base text-d-on-base) bg-l-base text-l-on-base font-sans pb-3em">
 		<Header />
 		<main>
 			<slot />
