--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -28,7 +28,7 @@ for (const post of posts) {
 				.sort(([a], [b]) => parseInt(b) - parseInt(a))
 				.map(([year, posts]: [string, any]) => (
 					<div class="my-12 relative">
-						<div class="text-2xl font-bold absolute -z-50 font-lexend text-9xl -top-12 -left-12 text-#111215 opacity-10 text-stroke">
+						<div class="text-2xl font-bold absolute -z-50 font-lexend text-9xl -top-12 -left-12 opacity-10 text-stroke @dark:(text-d-base) text-l-base ">
 							{year}
 						</div>
 						<ul class="mt-4 z-50 gap-4 grid">
