--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -17,7 +17,7 @@ const projectKeys = Object.keys(projects) as Array<keyof typeof projects>;
 						const _projects = projects[key] as unknown as Project[];
 						return (
 							<div class="flex flex-col gap-4 relative pt-8">
-								<h2 class="absolute text-6xl top-0 left-0 font-mono stroke-blueGray color-d-base opacity-20 font-bold capitalize -z-1 text-stroke">
+								<h2 class="absolute text-6xl top-0 left-0 font-mono stroke-blueGray @dark:(text-d-base) text-l-base opacity-20 font-bold capitalize -z-1 text-stroke">
 									{key}
 								</h2>
 								<div class="grid grid-cols-3 gap-3">
@@ -25,7 +25,7 @@ const projectKeys = Object.keys(projects) as Array<keyof typeof projects>;
 										<a
 											href={p.url}
 											class="relative duration-500 ease-in-out transition-all flex items-center opacity-75 rounded-md overflow-hidden py-2 px-4 hover:(opacity-100) project-items">
-											<div class="mouses absolute w-10 h-10 blur-3xl bg-gray opacity-75" style="display: none;" />
+											<div class="mouses absolute w-10 h-10 blur-3xl @dark:(bg-white) bg-black" style="display: none;" />
 											<div class="pt-2 pr-5">
 												<div
 													class={`w-full h-10 w-10 aspect-square grow-0 shrink object-contain rounded-lg block ${p.image}`}
