--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 interface Props {
 	title: string;
 	description: string;
@@ -118,3 +119,5 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 		}
 	}
 </style>
+<ViewTransitions />
+
