--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
+import LoadingIndicator from "../components/LoadingIndicator.astro";
 
 const { title, description } = Astro.props;
 ---
@@ -12,10 +13,12 @@ const { title, description } = Astro.props;
 		<BaseHead title={title} description={description} />
 	</head>
 	<body class="@dark:(bg-d-base text-d-on-base) bg-l-base text-l-on-base font-sans pb-3em">
+		<LoadingIndicator color="#bcc0cc" height="2px" threshold={10} animationDuration={500} />
 		<Header />
 		<main>
 			<slot />
 		</main>
 		<Footer />
+		<script></script>
 	</body>
 </html>
