fix: missing seo

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -13,7 +13,7 @@ for (const post of posts) {
 }
 ---
 
-<DefautLayout title="Blog">
+<DefautLayout title="Andka Blog, a collection of my thoughts">
 	<div class=":uno: grid gap-6 mt-32 max-w-3xl mx-auto px-12 mb-20 slide-enter-content">
 		<h1>
 			<span class=":uno: text-3xl lg:text-4xl font-bold font-lexend">Blog</span>
