--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -55,6 +55,7 @@ const iconLinks = [
 		{
 			iconLinks.map((link) => (
 				<a href={link.href} class=":uno: flex items-center" rel="noopener" target="_blank" 
+				aria-label={link.label}
                 title={link.label}>
 					<span class={link.icon + " w-5 h-5"} />
 				</a>
