fix: missing seo

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,7 +6,7 @@ import type { Project } from "../types/Project";
 const projectKeys = Object.keys(projects) as Array<keyof typeof projects>;
 ---
 
-<Layout>
+<Layout title="Andka projects, take a look at my projects" description="Here are some of the projects that i have done or work on.">
 	<div class=":uno: flex min-h-screen p-12 max-w-6xl mx-auto relative">
 		<main class=":uno: w-full flex flex-col gap-6 slide-enter-content">
 			<h1 class=":uno: text-center font-lexend text-3xl font-bold @dark:text-#e5e7eb">Projects</h1>
