--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,5 +2,5 @@
 ---
 
 <footer class=":uno: py-4">
-	<p class=":uno: text-xs text-center opacity-75"> Licensed under <a href="https://mit-license.org/" class=":uno: underline">MIT License</a> &middot; Project source code available on <a href="https://github.com/xirf/xirf-portofolio" class=":uno: underline">GitHub Repo</a > </p>
+	<p class=":uno: text-xs text-center opacity-75 px4"> Licensed under <a href="https://mit-license.org/" class=":uno: underline">MIT License</a> &middot; Project source code available on <a href="https://github.com/xirf/xirf-portofolio" class=":uno: underline">GitHub Repo</a > </p>
 </footer>
