--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,8 +21,8 @@ const socialMedia = [
 ---
 
 <Layout title="Andka is xirf, welcome to my home" description="Andika Nur Pratama, a student in Informatics Engineering, technology is my passion and dreaming about a better world with it and making it happen is a dream come true. I am generally into web dev things but over the past few month I have begun learning about android dev using kotlin if you are interested, you can visit my projects here. Ouside coding, I often spend my time playing some non-serious games, watching animes and reading manga if you have any recommendations please don't hesitate to suggest them. I live in Magetan, East Java so in case you're around don't hesitate to contact me, perhaps we'll grab some coffee or do some collaboration.">
-	<div class=":uno: flex items-center justify-center h-70vh p-12">
-		<div class=":uno: w-full grid gap-6 max-w-xl slide-enter-content">
+	<div class=":uno: flex items-center justify-center min-h-70vh p-12">
+		<div class=":uno: w-full grid gap-6 max-w-xl slide-enter-content			">
 			<div>
 				<h1 class=":uno: @dark:text-#e5e7eb text-4xl font-bold item">Xirf</h1>
 			</div>
