--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 ---
 
-<footer class=":uno: py-4">
-	<p class=":uno:  px4 text-xs text-center"> Licensed under <a href="https://mit-license.org/" class=":uno: underline">MIT License</a> &middot; Project source code available on <a href="https://github.com/xirf/xirf-portofolio" class=":uno: underline">GitHub Repo</a > </p>
+<footer class=" py-4">
+	<p class="  px4 text-xs text-center"> Licensed under <a href="https://mit-license.org/" class=" underline">MIT License</a> &middot; Project source code available on <a href="https://github.com/xirf/xirf-portofolio" class=" underline">GitHub Repo</a > </p>
 </footer>
