--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,6 @@
 ---
+import ToggleTheme from "./ToggleTheme.astro";
+
 const links = [
 	{
 		href: "/blog",
@@ -16,50 +18,49 @@ const iconLinks = [
 	{
 		href: "https://github.com/xirf",
 		icon: "i-myna-brand-github",
-        label: "GitHub",
+		label: "GitHub",
 	},
 	{
 		href: "https://twitter.com/xirfs",
 		icon: "i-myna-brand-x",
-        label: "Twitter",
+		label: "Twitter",
 	},
 	{
 		href: "mailto:itsandka@gmail.com",
 		icon: "i-myna-envelope",
-        label: "Email",
+		label: "Email",
 	},
 	{
 		href: "/rss.xml",
 		icon: "i-myna-rss",
-        label: "RSS",
+		label: "RSS",
 	},
 ];
 ---
 
-<nav class=":uno: px-8 py-6 w-full flex items-center justify-between">
+<nav class=" px-8 py-6 w-full flex items-center justify-between">
 	<a href="/">
-		<div class=":uno: flex justify-between gap-2 font-bold">
-			<span class=":uno: i-myna-terminal w-6 h-6">terminal</span>
-			<span class=":uno: hidden sm:block ">Andka</span>
+		<div class=" flex justify-between gap-2 font-bold">
+			<span class=" i-myna-terminal w-6 h-6">terminal</span>
+			<span class=" hidden sm:block">Andka</span>
 		</div>
 	</a>
-	<div class=":uno: flex items-center gap-4">
+	<div class=" flex items-center gap-4">
 		{
 			links.map((link) => (
-				<a href={link.href} class=":uno: flex items-center" title={link.label}>
+				<a href={link.href} class=" flex items-center" title={link.label}>
 					<span class={link.icon + " w-5 h-5 sm:hidden"} />
-					<span class=":uno: hidden sm:block">{link.label}</span>
+					<span class=" hidden sm:block">{link.label}</span>
 				</a>
 			))
 		}
 		{
 			iconLinks.map((link) => (
-				<a href={link.href} class=":uno: flex items-center" rel="noopener" target="_blank" 
-				aria-label={link.label}
-                title={link.label}>
+				<a href={link.href} class=" flex items-center" rel="noopener" target="_blank" aria-label={link.label} title={link.label}>
 					<span class={link.icon + " w-5 h-5"} />
 				</a>
 			))
 		}
+		<ToggleTheme />
 	</div>
 </nav>
