--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,58 +1,59 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import type { MarkdownHeading } from "astro";
+import Layout from "./Layout.astro";
 
 type Props = CollectionEntry<"blog">["data"] & { headings: MarkdownHeading[] };
 
 const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.props;
 ---
 
-<html lang="en">
-	<head>
-		<BaseHead title={title} description={description} />
-	</head>
-
-	<body class=":uno: text-d-on-base bg-d-base">
-		<Header />
-		<main class=":uno: relative">
-			<nav class=":uno: fixed top-16 right-8 h-screen w-25% flex flex-col group">
-				<div class=":uno: i-myna-list w8 h8 self-end opacity-75 group-hover:opacity-100 ease-in-out duration-500"></div>
-				<ul class=":uno: flex justify-center space-x-4 flex-col text-right w-full opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out">
-					{
-						headings.map((heading) => (
-							<li>
-								<a href={`#${heading.slug}`} class=":uno: opacity-75 hover:opacity-100 transition-all duration-500 ease-in-out">{heading.text}</a>
-							</li>
-						))
-					}
-				</ul>
-			</nav>
-			<article>
-				<div class=":uno: hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
-				</div>
-				<div class=":uno: w-3xl m-auto prose slide-enter-content pb32">
-					<div class=":uno: mb-8">
-						<h1 class=":uno: text-5xl font-bold mb-4">{title}</h1>
-						<div>
-							<FormattedDate date={pubDate} />
-							{
-								updatedDate && (
-									<div>
-										Last updated on <FormattedDate date={updatedDate} />
-									</div>
-								)
-							}
-						</div>
+<Layout title={title} description={description} image={heroImage || null}>
+	<div class=" relative">
+		<nav class=" fixed top-16 right-8 h-screen w-25% flex-col group hidden xl:flex">
+			<div class=" i-myna-list w8 h8 self-end opacity-75 group-hover:opacity-100 ease-in-out duration-500"></div>
+			<ul
+				class=" flex justify-center space-x-4 flex-col text-right w-full opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out">
+				{
+					headings.map((heading) => (
+						<li>
+							<a href={`#${heading.slug}`} class=" opacity-75 hover:opacity-100 transition-all duration-500 ease-in-out">
+								{heading.text}
+							</a>
+						</li>
+					))
+				}
+			</ul>
+		</nav>
+		<article class="px-8">
+			<div class=" max-w-3xl m-auto prose slide-enter-content pb32">
+				<div class=" mb-8">
+					<h1 class=" text-5xl font-bold mb-4">{title}</h1>
+					<div>
+						<FormattedDate date={pubDate} />
+						{
+							updatedDate && (
+								<div>
+									Last updated on <FormattedDate date={updatedDate} />
+								</div>
+							)
+						}
 					</div>
-					<slot />
 				</div>
-			</article>
-		</main>
-		<Footer />
-	</body>
-</html>
+				<slot />
+			</div>
+		</article>
+	</div>
+</Layout>
+
+<style is:global>
+	.prose h1 {
+		font-size: 2.5rem;
+	}
+
+	.prose pre{
+		padding: 1rem 1.5rem;
+		font-family: "JetBrains Mono", monospace;
+	}
+</style>
