--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,21 +4,21 @@ import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import LoadingIndicator from "../components/LoadingIndicator.astro";
 
-const { title, description } = Astro.props;
+const { title, description, image } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="">
 	<head>
-		<BaseHead title={title} description={description} />
+		<BaseHead title={title} description={description} image={image || null} />
 	</head>
-	<body class=":uno: @dark:(bg-d-base text-d-on-base) bg-l-base text-l-on-base font-sans pb-3em">
+	<body class=" dark:(bg-d-base text-d-on-base) bg-l-base text-l-on-base font-sans pb-5 md:pb-3em">
+		<a href="#main" class="sr-only focus:not-sr-only" tabindex="0">Skip to main content</a>
 		<LoadingIndicator color="#bcc0cc" height="2px" threshold={10} animationDuration={500} />
 		<Header />
-		<main>
+		<main id="main">
 			<slot />
 		</main>
 		<Footer />
-		<script></script>
 	</body>
 </html>
