--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,10 +14,10 @@ for (const post of posts) {
 ---
 
 <DefautLayout title="Andka Blog, a collection of my thoughts">
-	<div class=":uno: grid gap-6 mt-32 max-w-3xl mx-auto px-12 mb-20 slide-enter-content">
+	<div class=" grid gap-6 mt-32 max-w-3xl mx-auto px-12 mb-20 slide-enter-content">
 		<h1>
-			<span class=":uno: text-3xl lg:text-4xl font-bold font-lexend">Blog</span>
-			<span class=":uno: font-light text-sm">A collection of my thoughts</span>
+			<span class=" text-3xl lg:text-4xl font-bold font-lexend">Blog</span>
+			<span class=" font-light text-sm">A collection of my thoughts</span>
 		</h1>
 		<p>
 			Here you can find a collection of my thoughts on various topics. I try to write about things that I find interesting, and that I think
@@ -27,21 +27,21 @@ for (const post of posts) {
 			Object.entries(postsByYear)
 				.sort(([a], [b]) => parseInt(b) - parseInt(a))
 				.map(([year, posts]: [string, any]) => (
-					<div class=":uno: my-12 relative">
-						<div class=":uno: text-2xl font-bold absolute -z-50 font-lexend text-9xl -top-12 -left-12 opacity-10 text-stroke @dark:(text-d-base) text-l-base ">
+					<div class=" my-12 relative">
+						<div class=" text-2xl font-bold absolute -z-50 font-lexend text-9xl -top-12 -left-12 opacity-10 text-stroke dark:(text-d-base) text-l-base ">
 							{year}
 						</div>
-						<ul class=":uno: mt-4 z-50 gap-4 grid">
+						<ul class=" mt-4 z-50 gap-4 grid">
 							{posts
 								.sort((a: any, b: any) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
 								.map((post: any) => (
-									<li class=":uno: mt-2">
+									<li class=" mt-2">
 										<a
 											href={`/blog/${post.slug}`}
-											class=":uno: text-blue-400 inline-block hover:-translate-y-1 duration-300 transition-all transform inline-flex items-end gap-4">
+											class=" text-blue-400 inline-block hover:-translate-y-1 duration-300 transition-all transform inline-flex items-end gap-4">
 											<p>
 												{post.data.title}
-												<span class=":uno: text-xs text-gray-500 inline-block">
+												<span class=" text-xs text-gray-500 inline-block">
 													{new Date(post.data.pubDate).toLocaleDateString("en-US", {
 														day: "2-digit",
 														month: "long",
