--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,33 +7,33 @@ const projectKeys = Object.keys(projects) as Array<keyof typeof projects>;
 ---
 
 <Layout title="Andka projects, take a look at my projects" description="Here are some of the projects that i have done or work on.">
-	<div class=":uno: flex min-h-screen p-12 max-w-6xl mx-auto relative">
-		<main class=":uno: w-full flex flex-col gap-6 slide-enter-content">
-			<h1 class=":uno: text-center font-lexend text-3xl font-bold @dark:text-#e5e7eb">Projects</h1>
-			<p class=":uno: text-center">Thing that i have done or work on</p>
-			<div class=":uno: flex flex-col gap-16">
+	<div class=" flex min-h-screen p-12 max-w-6xl mx-auto relative">
+		<main class=" w-full flex flex-col gap-6 slide-enter-content">
+			<h1 class=" text-center font-lexend text-3xl font-bold dark:text-#e5e7eb">Projects</h1>
+			<p class=" text-center">Thing that i have done or work on</p>
+			<div class=" flex flex-col gap-16">
 				{
 					projectKeys.map((key) => {
 						const _projects = projects[key] as unknown as Project[];
 						return (
-							<div class=":uno: flex flex-col gap-4 relative pt-8">
-								<h2 class=":uno: absolute text-6xl top-0 left-0 font-mono stroke-blueGray @dark:(text-d-base) text-l-base opacity-20 font-bold capitalize -z-1 text-stroke">
+							<div class=" flex flex-col gap-4 relative pt-8">
+								<h2 class=" absolute text-6xl top-0 left-0 font-mono stroke-blueGray dark:(text-d-base) text-l-base opacity-20 font-bold capitalize -z-1 text-stroke">
 									{key}
 								</h2>
-								<div class=":uno: grid xl:grid-cols-3 gap-3">
+								<div class=" grid xl:grid-cols-3 gap-3">
 									{_projects.map((p: Project) => (
 										<a
 											href={p.url}
-											class=":uno: relative duration-500 ease-in-out transition-all flex items-center opacity-75 rounded-md overflow-hidden py-2 px-4 hover:(opacity-100) project-items">
-											<div class=":uno: mouses absolute w-10 h-10 blur-3xl @dark:(bg-white) bg-black" style="display: none;" />
-											<div class=":uno: pt-2 pr-5">
+											class=" relative duration-500 ease-in-out transition-all flex items-center opacity-75 rounded-md overflow-hidden py-2 px-4 hover:(opacity-100) project-items">
+											<div class=" mouses absolute w-10 h-10 blur-3xl dark:(bg-white) bg-black" style="display: none;" />
+											<div class=" pt-2 pr-5">
 												<div
 													class={`w-full h-10 w-10 aspect-square grow-0 shrink object-contain rounded-lg block ${p.image}`}
 												/>
 											</div>
-											<div class=":uno: w-full">
-												<h3 class=":uno: font-lexend text-xl font-bold">{p.name}</h3>
-												<p class=":uno: font-lexend text-sm">{p.description}</p>
+											<div class=" w-full">
+												<h3 class=" font-lexend text-xl font-bold">{p.name}</h3>
+												<p class=" font-lexend text-sm">{p.description}</p>
 											</div>
 										</a>
 									))}
