--- a/src/components/ToggleTheme.astro
+++ b/src/components/ToggleTheme.astro
@@ -45,10 +45,12 @@
 			});
 
 			transition.ready.then(() => {
+				const button = document.getElementById("toggle-theme")
+
 				let isDark = localStorage.getItem("isDarkMode") === "true";
 
-				const x = e.clientX;
-				const y = e.clientY;
+				const x = button.getBoundingClientRect().left + button.offsetWidth / 2;
+				const y = button.getBoundingClientRect().top + button.offsetHeight / 2;
 				const endRadius = Math.hypot(Math.max(window.innerWidth - x, x), Math.max(window.innerHeight - y, y));
 
 				const clipPath = [`circle(0px at ${x}px ${y}px)`, `circle(${endRadius}px at ${x}px ${y}px)`];
