--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,11 +10,11 @@ const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.
 ---
 
 <Layout title={title} description={description} image={heroImage || null}>
-	<div class=" relative">
-		<nav class=" fixed top-16 right-8 h-screen w-25% flex-col group hidden xl:flex">
-			<div class=" i-myna-list w8 h8 self-end opacity-75 group-hover:opacity-100 ease-in-out duration-500"></div>
+	<div class="relative">
+		<nav class="fixed top-16 right-8 h-screen w-25% flex-col group hidden xl:flex">
+			<div class="i-myna-list w8 h8 self-end opacity-75 group-hover:opacity-100 ease-in-out duration-500"></div>
 			<ul
-				class=" flex justify-center space-x-4 flex-col text-right w-full opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out">
+				class="flex justify-center space-x-4 flex-col text-right w-full opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out">
 				{
 					headings.map((heading) => (
 						<li>
@@ -26,10 +26,10 @@ const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.
 				}
 			</ul>
 		</nav>
-		<article class="px-8">
-			<div class=" max-w-3xl m-auto prose slide-enter-content pb32">
-				<div class=" mb-8">
-					<h1 class=" text-5xl font-bold mb-4">{title}</h1>
+		<div class="px-8">
+			<article class="max-w-3xl m-auto prose slide-enter-content pb32">
+				<div class="mb-8">
+					<h1 class="text-5xl font-bold mb-4">{title}</h1>
 					<div>
 						<FormattedDate date={pubDate} />
 						{
@@ -42,8 +42,8 @@ const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.
 					</div>
 				</div>
 				<slot />
-			</div>
-		</article>
+			</article>
+		</div>
 	</div>
 </Layout>
 
@@ -52,7 +52,7 @@ const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.
 		font-size: 2.5rem;
 	}
 
-	.prose pre{
+	.prose pre {
 		padding: 1rem 1.5rem;
 		font-family: "JetBrains Mono", monospace;
 	}
