--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -19,7 +19,7 @@ for (const post of posts) {
 }
 ---
 
-<DefautLayout title="Andka Blog, a collection of my thoughts">
+<DefautLayout title="Andka Blog, a collection of my thoughts" description="Here you can find a collection of my thoughts on various topics. I try to write about things that I find interesting, and that I think others might find interesting as well. I hope you enjoy reading them!">
 	<div class="grid gap-6 mt-32 max-w-3xl mx-auto px-12 mb-20 slide-enter-content">
 		<h1>
 			<span class="text-3xl lg:text-4xl font-bold font-lexend">Blog</span>
