--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = "/screenshot.png" } = Astro.props;
+const { title, description, image = "/images/screenshot-dark.png" } = Astro.props;
 ---
 
 <meta charset="utf-8" />
@@ -16,7 +16,7 @@ const { title, description, image = "/screenshot.png" } = Astro.props;
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 <link rel="canonical" href={canonicalURL} />
-<script defer>
+<script defer is:inline>
 	!(function () {
 		var e = window.matchMedia("(prefers-color-scheme: dark)").matches;
 		var t = localStorage.getItem("isDarkMode") || "auto";
