--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ interface Props {
 	title: string;
 	description: string;
 	image?: string;
-	isBlog: boolean;
+	isBlog?: boolean;
 }
 
 const { title, description, image, isBlog } = Astro.props;
@@ -17,7 +17,7 @@ const { title, description, image, isBlog } = Astro.props;
 <!doctype html>
 <html lang="en">
 	<head>
-		<BaseHead title={title} description={description} image={image || null} />
+		<BaseHead title={title} description={description} image={image} />
 	</head>
 	<body class=" dark:(bg-d-base text-d-on-base) bg-l-base text-l-on-base font-sans pb-5 md:pb-3em">
 		<a href="#main" class="sr-only focus:not-sr-only" tabindex="0">Skip to main content</a>
@@ -26,6 +26,6 @@ const { title, description, image, isBlog } = Astro.props;
 		<main id="main">
 			<slot />
 		</main>
-		<Footer isBlog />
+		<Footer isBlog={isBlog} />
 	</body>
 </html>
