feat: add id label  in projects

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -27,6 +27,8 @@ const { Content, headings } = await post.render();
 <BlogPost {...post.data} headings={headings}>
 	<Content />
 
+	<hr class="w-20 mx-auto px-10vw bg-gray h-1px opacity50" />
+
 	<div class="grid gap-2">
 		<a href="/blog" <a class="decoration-none">&gt; cd ../blog</a>
 		{
