--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -27,7 +27,10 @@ const projectKeys = Object.keys(projects) as Array<keyof typeof projects>;
 												<div class="mouses absolute w-10 h-10 blur-3xl dark:(bg-white) bg-black" style="display: none;" />
 												<div class="pt-2 pr-5">
 													<div
-														class={`w-full h-10 w-10 aspect-square grow-0 shrink object-contain rounded-lg block ${p.image}`}
+														class:list={[
+															`w-full h-10 w-10 aspect-square grow-0 shrink object-contain rounded-lg block`,
+															p.image,
+														]}
 													/>
 												</div>
 												<div class="w-full">
@@ -41,11 +44,14 @@ const projectKeys = Object.keys(projects) as Array<keyof typeof projects>;
 											"relative duration-500 ease-in-out transition-all flex items-center opacity-75 rounded-md overflow-hidden py-2 px-4 hover:(opacity-100) project-items";
 
 										return p.url ? (
-											<a href={p.url} target="_blank" class={className}>{pContent}</a>
+											<a href={p.url} target="_blank" class={className}>
+												{pContent}
+											</a>
 										) : (
 											<div class:list={[className, "cursor-not-allowed"]}>{pContent}</div>
 										);
 									})}
+									
 								</div>
 							</div>
 						);
