--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -31,6 +31,7 @@ const { title, description, image = "/images/screenshot-dark.png" } = Astro.prop
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
+<meta property="og:site_name" content={Astro.site} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={new URL(image, Astro.url)} />
 <meta property="twitter:card" content="summary_large_image" />
@@ -38,6 +39,7 @@ const { title, description, image = "/images/screenshot-dark.png" } = Astro.prop
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+<link rel="sitemap" type="application/xml" href="/sitemap-index.xml" />
 <style is:global>
 	* {
 		scroll-behavior: smooth;
