--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
+import Cookie from "../components/Cookie.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import LoadingIndicator from "../components/LoadingIndicator.astro";
@@ -27,5 +28,6 @@ const { title, description, image, isBlog } = Astro.props;
 			<slot />
 		</main>
 		<Footer isBlog={isBlog} />
+		<Cookie />
 	</body>
 </html>
