--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,19 +1,9 @@
 ---
-const { isBlog } = Astro.props;
+
 ---
 
 <footer class="py-4">
 	<p class="px4 text-xs text-center">
-		{
-			isBlog ? (
-				<>
-					Licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="underline">CC BY 4.0</a> &middot; some content may be licensed under different terms
-				</>
-			) : (
-				<>
-					Licensed under <a href="https://mit-license.org/" class="underline"> MIT License </a> &middot; Project source code available at <a href="https://github.com/xirf/xirf-portofolio" class="underline">GitHub Repo</a>
-				</>
-			)
-		}
+		<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="external nofollow noopener noreferrer" class="underline">CC BY-NC-SA 4.0 ➚</a>  2023-PRESENT © Andka | <a href="/privacy " class="underline">Privacy Policy</a> | <a href="https://status.andka.my.id/" target="_blank" rel="external nofollow noopener noreferrer" class="underline">Status ➚</a>
 	</p>
 </footer>
