--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,5 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
-import Cookie from "../components/Cookie.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import LoadingIndicator from "../components/LoadingIndicator.astro";
@@ -12,7 +11,7 @@ interface Props {
 	isBlog?: boolean;
 }
 
-const { title, description, image, isBlog } = Astro.props;
+const { title, description, image } = Astro.props;
 ---
 
 <!doctype html>
@@ -27,7 +26,6 @@ const { title, description, image, isBlog } = Astro.props;
 		<main id="main">
 			<slot />
 		</main>
-		<Footer isBlog={isBlog} />
-		<Cookie />
+		<Footer />
 	</body>
 </html>
